<resources>
    <string name="app_name">DZ5_PROBA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="web_client_id">834830708574-81vjj48sekrk94v80ctceldqj1l6jvik.apps.googleusercontent.com</string>
    <string name="signin">Sign In</string>
    <string name="hello_user">Hello </string>
    <string name="enter_email">Введите почту</string>
    <string name="enter_password">Введите пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Войти в систему</string>
    <string name="forgot_password">Зaбыли пароль</string>
    <string name="enter_confirm_code">Введите код подверждение</string>
    <string name="confirm">Подвердить</string>
    <string name="new_code">Введите новый пароль</string>
    <string name="helllo">Helllo</string>
    <string name="task_name">task name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_random_tasks">add random tasks</string>
    <string name="gallery">Gallery</string>
    <string name="category_title">category title</string>
    <string name="add_category">add category</string>
    <string name="task_s_title">Task\'s title</string>
    <string name="category_name">category name</string>
    <string name="create">create</string>
    <string name="current_username">Current Username:</string>
    <string name="new_username">New Username:</string>
    <string name="avatar">Avatar:</string>
    <string name="enter_new_avatar_url">Enter New Avatar URL</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="save_changes">Save Changes</string>
    <string name="default_notification_channel_id">default_notification_channel_id\n</string>
    <string name="channel_name">channel_name\n</string>
    <string name="channel_description">channel_description</string>

</resources>