<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".create.CreateTaskFragment">

    <EditText
        android:id="@+id/et_tasks_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_s_title" />

    <EditText
        android:id="@+id/et_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_name" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />

</LinearLayout>