<!-- fragment_profile.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".profile.ProfileFragment">


    <TextView
        android:id="@+id/textViewCurrentUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_username"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextCurrentUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:padding="8dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewNewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_username"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextNewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@mipmap/ic_launcher"
        android:padding="8dp"

        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avatar"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextNewAvatarUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@mipmap/ic_launcher_round"
        android:hint="@string/enter_new_avatar_url"
        android:padding="8dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnChangeAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_launcher_background"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        android:text="@string/change_avatar"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_launcher_background"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        android:text="@string/save_changes"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>
