<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/profileFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dz5_proba.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.dz5_proba.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.dz5_proba.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.example.dz5_proba.ui.Gallery.GalleryFragment"
        android:label="fragment_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_galleryFragment_to_createTaskFragment"
            app:destination="@id/createTaskFragment" />
    </fragment>
    <fragment
        android:id="@+id/createTaskFragment"
        android:name="com.example.dz5_proba.create.CreateTaskFragment"
        android:label="fragment_create_task"
        tools:layout="@layout/fragment_create_task" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.dz5_proba.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>